# myTextsplitter

./: .gitignore  README.md  index.html  package.json  startApp.sh  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/: App.tsx  AppStyle.css  SplashScreen.tsx  TestFile.ts  Themes.ts  main.tsx  splash.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  memory_usage.rs  settings.rs  text_diff.rs  text_processor.rs
src/components/: AppBorders.tsx  Checkbox.tsx  CircularProgressBar.tsx  CopyButton.tsx  CustomSelect.tsx  Header.tsx  IconRoundedButton.tsx  InputText.tsx  LeftMenuBar.tsx  MatchPreview.tsx  OpenFileButton.tsx  PageList.tsx  RegexBuilder.tsx  RegexTester.tsx  ScrollableContainer.tsx  SettingsModal.tsx  SvgIcons.tsx
src/config/: pages.tsx
src/hooks/: useBackendProcessor.ts  useCombineHistoryStore.ts  useDragAndDrop.ts  useHistory.ts  useHotkeys.ts  useKeyboardShortcuts.ts  useProcessingState.ts  useProcessingStore.ts  useSettings.ts  useSnackbar.ts  useTextBuffer.tsx
src/i18n/: index.ts
src/other/: DebugConsole.tsx  ErrorBoundary.tsx  Logger.ts  Snackbar.tsx  SnackbarProvider.tsx  TypeConverter.ts  debugConsole.ts  error2.ts
src/pages/: AboutPage.tsx  DiffPage.tsx  FilterPage.tsx  RemovePage.tsx  SettingsPage.tsx  SortPage.tsx  SplitPage.tsx  splashscreen.html
src/services/: BaseService.ts  DiffService.ts  FilterService.ts  RemoveService.ts  Services.ts  SplitService.ts  tauriInvoke.ts
src/types/: global.d.ts  globals.d.ts  test.d.ts
src/utils/: ConvertTextCase.ts  MenuHelper.ts  (+11 more)
(+44 files in other folders)
