[package]
name = "textsplitter"
version = "0.1.0"
description = "A text split and management tool"
authors = ["you"]
default-run = "textsplitter"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mytextsplitter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.2.0", features = [] }
tauri-plugin-fs = { version = "2.2.0", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-notification = "2.2.0"
tauri-plugin-devtools = "2.0.0"
strip-ansi-escapes = "0.2.1"
thiserror = "2.0.11"
home = "0.5.11"
dirs = "6.0.0"
memory-stats = { version = "1.2.0", features = ["always_use_statm"] }
thousands = "0.2.0"
fancy-regex = "0.14.0"
lazy_static = "1.5.0"

settimeout = "0.1.2"
window-shadows = "0.2.1"
chrono = "0.4.24"
once_cell = "1.17.2"

